--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+<header>
+  <div class="header-logo">
+    ConsultationtApp
+  </div>
+  <ul class="header-menus">
+    <li>ConsultationAppとは</li>
+  </ul>
+</header>
+
     <%= yield %>
   </body>
 </html>
