--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,23 @@
   </head>
 
   <body>
-<header>
-  <div class="header-logo">
-    ConsultationtApp
-  </div>
-  <ul class="header-menus">
-    <li>ConsultationAppとは</li>
-  </ul>
-</header>
+
+    <header>
+      <div class="header-logo">
+        <!-- 以下のリンクをlink_toメソッドを用いて変更してください -->
+       <%= link_to("ホーム画面", "/") %>
+      </div>
+      <ul class="header-menus">
+        <li>
+          <!-- 以下のリンクをlink_toメソッドを用いて変更してください -->
+          <%= link_to("遊び方", "/about") %>
+        </li>
+        <li>
+          <!-- ここにlink_toメソッドを用いて投稿一覧ページへのリンクを作成してください -->
+          <%= link_to("掲示板", "/posts/index") %>
+        </li>
+      </ul>
+    </header>
 
     <%= yield %>
   </body>
