--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,8 +2,9 @@
   <div class="container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
-        <%= post.content %>
+        <!-- 以下をlink_toメソッドを用いて書き換えてください -->
+        <%= link_to(post.content, "/posts/#{post.id}") %>
       </div>
-    <% end %>  
+    <% end %>
   </div>
 </div>
